﻿gRecipe Change log
William Olson
 
* 1.0  9/24/2010
 - Initial Release
 
* 1.1  9/24/2010
 - Minor bug fixes
 - Now gets full summary text from epicurious
 - Added usage statistics
 
* 1.2 9/26/2010
 - General beautification
 - Added automatic open and usage statistics options
 - Added link to document from popup

* 1.3 9/26/2010
 - Small bug fixes

* 1.4 9/27/2010
 - Fixed false positives on epicurious
 - Style tweaking on options page
 - Made option discriptions clearer
 - Added support for food.com