@@ -22,3 +22,4 @@ William Olson
  - Style tweaking on options page
  - Made option discriptions clearer
  - Added support for food.com
+ - Added support for foodandwine.com
